@@ -42,6 +42,7 @@
  - [DS-242] Special groups shown for logged in user rather than for user being examined
  - [DS-250] Invalid identifiers are not escaped
  - [DS-256] Item Export ignores metadata language qualifier
+ - [DS-279] XMLUI Item Mapper will map the same item more than one time
  - [DS-290] [dspace]/exports is not created during fresh install
  - [DS-303] Export migrate option incorrectly removes non-handle identifier.uris
 
